TODO:
* library
** add indication to specify all remaining data
** complete open data file IO handles function
** add support to read and cache in memory for slow media?

* COW file format
** add base block number to allocation table block header?
** use vshadow block tree approach as runtime cache of allocation table?

* tests
** complete handle tests
** read and write tests

* document examples
** virtualize 0-byte filled data
** data file with specific offset to expose specific volume
** open dirty file system with write access, create "shadow" file

20201124
* see `git log' for more recent change log
* Initial version based on libbfio and libsigscan
