@@ -277,6 +277,46 @@ int mount_handle_set_path_prefix(
 	return( 1 );
 }
 
+/* Sets the path suffix
+ * Returns 1 if successful or -1 on error
+ */
+int mount_handle_set_path_suffix(
+     mount_handle_t *mount_handle,
+     const system_character_t *path_suffix,
+     size_t path_suffix_size,
+     libcerror_error_t **error )
+{
+	static char *function = "mount_handle_set_path_suffix";
+
+	if( mount_handle == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid mount handle.",
+		 function );
+
+		return( -1 );
+	}
+	if( mount_file_system_set_path_suffix(
+	     mount_handle->file_system,
+	     path_suffix,
+	     path_suffix_size,
+	     error ) != 1 )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_SET_FAILED,
+		 "%s: unable to set path suffix.",
+		 function );
+
+		return( -1 );
+	}
+	return( 1 );
+}
+
 /* Opens the mount handle
  * Returns 1 if successful, 0 if not or -1 on error
  */
